# Interpreter

./: .gitignore  CMakeLists.txt  README.md
lib/: interpreter.cpp  interpreter.h  lexer.h  parser.h
tests/: CMakeLists.txt  function_test.cpp  if_else_test.cpp  illegal_ops_test.cpp  list_functions_test.cpp  loop_and_branch_test.cpp  number_functions_test.cpp  string_functions_test.cpp  system_functions_test.cpp  types_test.cpp
